# openeb_vendor-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  openeb_vendor-extras.cmake.in  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: ci.yaml
debian/: changelog  control  copyright  gbp.conf  rules
patches/: 0001-add-silkyev_cam-plugin.patch
rpm/: ros-iron-openeb-vendor.spec  ros-jazzy-openeb-vendor.spec  ros-rolling-openeb-vendor.spec  template.spec
